Fix width, remove bad spacing.

--- a/src/herbie/SpecComponent.css
+++ b/src/herbie/SpecComponent.css
@@ -1,14 +1,3 @@
-.spec-tex {
-  /* color: black; */
-  /* add space */
-  margin: 10px 0;
-  min-height: 2em;
-}
-
-.spec-range-inputs {
-  min-height: 4em;
-}
-
 .spec-title {
   margin-left: 5px;
   cursor: pointer;
